--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   cupertino_icons: 1.0.8
   http: 1.3.0
   intl: 0.20.2
+  flutter_launcher_icons: ^0.14.3
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/timecheck_icon.png"
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +72,7 @@ flutter:
   # https://flutter.dev/to/resolution-aware-images
   assets:
     - assets/images/timecheck_logo.png
+    - assets/images/timecheck_icon.png
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
 
