--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: 1.3.0
   intl: 0.20.2
   flutter_launcher_icons: ^0.14.3
+  table_calendar: ^3.2.0
 
 flutter_launcher_icons:
   android: true
