--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.8
   http: 1.3.0
-  intl: 0.20.2
+  intl: ^0.20.2
   flutter_launcher_icons: ^0.14.3
   table_calendar: ^3.2.0
 
