--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.20.2
   flutter_launcher_icons: ^0.14.3
   table_calendar: ^3.2.0
+  provider: ^6.1.4
 
 flutter_launcher_icons:
   android: true
