adcionado imagens para o git

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,19 @@ flutter:
   assets:
     - assets/images/timecheck_logo.png
     - assets/images/timecheck_icon.png
+    
+    - assets/images/git/print_home_dark.jpg
+    - assets/images/git/print_home_ligth.jpg
+    - assets/images/git/print_inicio_dark.jpg
+    - assets/images/git/print_inicio_ligth.jpg
+    - assets/images/git/print_login_dark.jpg
+    - assets/images/git/print_login_ligth.jpg
+    - assets/images/git/print_mensagem_dark.jpg
+    - assets/images/git/print_mensagem_ligth.jpg
+    - assets/images/git/print_registro_dark.jpg
+    - assets/images/git/print_registro_ligth.jpg
+    - assets/images/git/print_registros_dark.jpg
+    - assets/images/git/print_registros_ligth.jpg
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
 
